objects/Material_Order_Line_Item_Receipt__c/Material_Order_Line_Item_Receipt__c.object-meta.xml
<CustomObject>
    <label>Material Order Line Item Receipt</label>
    <nameField>
        <displayFormat>MOLI-{000000}</displayFormat>
        <label>Material Order Line Item Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Order Line Item Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>