objects/Material_Order_Line_Item_Receipt__c/fields/Material_Purchase_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Purchase_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Order Line Item</label>
    <referenceTo>Material_Purchase_Line_Item__c</referenceTo>
    <relationshipLabel>Material Order Line Item Receipts</relationshipLabel>
    <relationshipName>Material_Order_Line_Item_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>