objects/Material_Order_Line_Item_Receipt__c/fields/MOLI_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>MOLI_Receipt_Date__c</fullName>
    <label>MOLI Receipt Date</label>
    <type>Date</type>
</CustomField>