objects/Material_Order_Line_Item_Receipt__c/fields/MOLI_Receipt_Qty__c.field-meta.xml
<CustomField>
    <fullName>MOLI_Receipt_Qty__c</fullName>
    <label>MOLI Receipt Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>