objects/Material_Order_Line_Item_Receipt__c/fields/MPLI_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>MPLI_Receipt_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>